Fixed not wrapping tags in discover tile

--- a/app/client/stylesheets/components/pu-partuptile.sass
+++ b/app/client/stylesheets/components/pu-partuptile.sass
@@ -38,7 +38,7 @@
         pointer-events: none
 
         li
-            display: inline-block
+            // display: inline-block
             margin: 10px 0 0
             padding: 3px 12px
             background: $color-border-light
